--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="hJ18TN7PGT1Pxfnf1bqxzxoMQ0t4EtGpWnj5cjLokSA" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottleneck Checker Essentials: How to Assess Your PC's Performance Bottlenecks</title>
